--- a/bin/dune
+++ b/bin/dune
@@ -2,3 +2,6 @@
  (name ocaml_uideps)
  (public_name ocaml-uideps)
  (libraries lib))
+
+;/Users/ulysse/.opam/4.14.0~alpha1/bin
+;/Users/ulysse/.opam/4.14.0~alpha1/bin/ocaml-uideps
