Add dependency on cmdliner

--- a/ocaml-uideps.opam
+++ b/ocaml-uideps.opam
@@ -5,6 +5,7 @@ description:
   "ocaml-uideps should integrate with the build system to index a codebase."
 depends: [
   "dune" {>= "2.9"}
+  "cmdliner" {>= "1.1.0"}
   "odoc" {with-doc}
 ]
 build: [
