--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
- (name ocaml_uideps)
- (public_name ocaml-uideps)
+ (name ocaml_index)
+ (public_name ocaml-index)
  (libraries cmdliner lib))
