--- a/ocaml-index.opam
+++ b/ocaml-index.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 synopsis: "A tool that indexes value usages in a cmt file."
 description:
-  "ocaml-uideps should integrate with the build system to index a codebase."
+  "ocaml-index should integrate with the build system to index a codebase."
 depends: [
   "dune" {>= "2.9"}
   "cmdliner" {>= "1.1.0"}
