--- a/ocaml-index.opam
+++ b/ocaml-index.opam
@@ -6,7 +6,7 @@ description:
 depends: [
   "dune" {>= "2.9"}
   "cmdliner" {>= "1.1.0"}
-  "merlin-lib" {>= "4.13"}
+  "merlin-lib" {>= "5.0"}
   "odoc" {with-doc}
 ]
 build: [
@@ -24,4 +24,7 @@ build: [
     "@doc" {with-doc}
   ]
   ["dune" "install" "-p" name "--create-install-files" name]
+]
+pin-depends: [
+  ["merlin-lib.5.0-502" "git+https://github.com/voodoos/merlin#502-preview+PWO"]
 ]
