--- a/ocaml-index.opam.template
+++ b/ocaml-index.opam.template
@@ -1,3 +1,3 @@
 pin-depends: [
-  ["merlin-lib.5.1"  "git+https://github.com/ocaml/merlin"]
+  ["merlin-lib.5.1-502"  "git+https://github.com/ocaml/merlin"]
 ]
